--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,3 +7,6 @@
 @import ".//components/main/our-team";
 @import ".//components/main/clients";
 @import ".//components/header_footer/footer";
+@import ".//components/main/modal/modal";
+@import ".//components/main/modal/forms";
+@import ".//components/portfolio/portfolio";
