--- a/sass/components/header_footer/_footer.scss
+++ b/sass/components/header_footer/_footer.scss
@@ -5,12 +5,19 @@
   padding-bottom: 60px;
 }
 .footer__container {
-  display: flex;
-  @media screen and (min-width: 480px) and (max-width: 767px) {
+  padding: 0 15px;
+  margin-left: auto;
+  margin-right: auto;
+  @media screen and (min-width: 1200px) {
+    display: flex;
+  }
+
+  @media screen and (max-width: 767px) {
     display: block;
     text-align: center;
   }
   @media screen and (min-width: 768px) and (max-width: 1199px) {
+    display: flex;
     flex-wrap: wrap;
   }
 }
@@ -93,7 +100,7 @@
   padding: 0px;
   margin-top: 0px;
   margin-bottom: 0px;
-  @media screen and (min-width: 480px) and (max-width: 767px) {
+  @media screen and (max-width: 767px) {
     justify-content: center;
   }
 }
@@ -130,6 +137,7 @@
   @media screen and (min-width: 480px) and (max-width: 1199px) {
     margin-left: auto;
     margin-right: auto;
+    width: 450px;
     text-align: center;
   }
   @media screen and (min-width: 1200px) {
@@ -153,12 +161,16 @@
 }
 .footer-form__input {
   color: #ffff;
-  width: 358px;
+  width: 100%;
+
   padding: 15px 16px 15px 16px;
   background-color: inherit;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
+  @media screen and (min-width: 1200px) {
+    width: 358px;
+  }
 }
 .footer-form__button {
   display: flex;
@@ -177,7 +189,7 @@
   border-radius: 4px;
   border-color: transparent;
 
-  @media screen and (min-width: 480px) and (max-width: 1199px) {
+  @media screen and (max-width: 1199px) {
     margin-top: 20px;
     margin-left: auto;
     margin-right: auto;
