--- a/sass/components/main/modal/_modal.scss
+++ b/sass/components/main/modal/_modal.scss
@@ -14,12 +14,17 @@
   left: 50%;
   transform: translate(-50%, -50%);
   height: 581px;
-  min-width: 528px;
   padding: 40px;
   background-color: #ffff;
   border-radius: 4px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
+  @media screen and (max-width: 1199px) {
+    width: 450px;
+  }
+  @media screen and (min-width: 1200px) {
+    min-width: 528px;
+  }
 }
 .backdrop.is-hidden {
   opacity: 0;
