--- a/sass/components/portfolio/_portfolio.scss
+++ b/sass/components/portfolio/_portfolio.scss
@@ -32,14 +32,19 @@
 .portfolio {
   display: flex;
   flex-wrap: wrap;
+  @media screen and (max-width: 767px) {
+    display: block;
+  }
 }
 
 .portfolio__item {
-  margin-right: 30px;
-  margin-bottom: 30px;
-  width: calc((100% - 60px) / 3);
   transition: var(--shdow-animation);
   border-bottom: 1px solid #eeeeee;
+  @media screen and (min-width: 1200px) {
+    margin-right: 30px;
+    margin-bottom: 30px;
+    width: calc((100% - 60px) / 3);
+  }
 
   &:hover,
   &:focus {
