--- a/css/main.css
+++ b/css/main.css
@@ -1273,8 +1273,30 @@ a {
   margin-bottom: 50px;
 }
 
-.examples__item + .examples__item {
-  margin-left: 8px;
+@media screen and (max-width: 767px) {
+  .examples {
+    justify-content: flex-start;
+    flex-wrap: wrap;
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .examples {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .examples__item:not(:last-child) {
+    margin-right: 8px;
+    margin-bottom: 15px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .examples__item + .examples__item {
+    margin-left: 8px;
+  }
 }
 
 .examples__button {
@@ -1307,9 +1329,24 @@ a {
   }
 }
 
+@media screen and (min-width: 768px) {
+  .portfolio {
+    margin-top: -30px;
+    margin-left: -30px;
+  }
+}
+
 .portfolio__item {
   transition: var(--shdow-animation);
-  border-bottom: 1px solid #eeeeee;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .portfolio__item {
+    width: calc((100% - 2 * 30px) / 2);
+    margin-top: 30px;
+    margin-left: 30px;
+    height: 440px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
@@ -1324,16 +1361,13 @@ a {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.portfolio__item:hover:nth-child(3n), .portfolio__item:focus:nth-child(3n) {
-  margin-right: 0px;
-}
-
-.portfolio__item:nth-child(3n) {
-  margin-right: 0px;
-}
-
-.portfolio__item:nth-last-child(-n + 3) {
-  margin-bottom: 0px;
+@media screen and (min-width: 1200px) {
+  .portfolio__item:nth-child(3n) {
+    margin-right: 0px;
+  }
+  .portfolio__item:nth-last-child(-n + 3) {
+    margin-bottom: 0px;
+  }
 }
 
 .portfolio__link {
