--- a/sass/components/portfolio/_portfolio.scss
+++ b/sass/components/portfolio/_portfolio.scss
@@ -4,11 +4,26 @@
   display: flex;
   justify-content: center;
   margin-bottom: 50px;
+  @media screen and (max-width: 767px) {
+    justify-content: flex-start;
+    flex-wrap: wrap;
+  }
+  @media screen and (max-width: 1199px) {
+    margin-bottom: 30px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .examples__item:not(:last-child) {
+    margin-right: 8px;
+    margin-bottom: 15px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .examples__item + .examples__item {
+    margin-left: 8px;
+  }
 }
 
-.examples__item + .examples__item {
-  margin-left: 8px;
-}
 .examples__button {
   font-family: inherit;
   font-weight: 500;
@@ -35,11 +50,21 @@
   @media screen and (max-width: 767px) {
     display: block;
   }
+  @media screen and (min-width: 768px) {
+    margin-top: -30px;
+    margin-left: -30px;
+  }
 }
 
 .portfolio__item {
   transition: var(--shdow-animation);
-  border-bottom: 1px solid #eeeeee;
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    width: calc((100% - 2 * 30px) / 2);
+    margin-top: 30px;
+    margin-left: 30px;
+    height: 440px;
+  }
   @media screen and (min-width: 1200px) {
     margin-right: 30px;
     margin-bottom: 30px;
@@ -50,18 +75,16 @@
   &:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
       1px 4px 6px rgba(0, 0, 0, 0.16);
-
-    &:nth-child(3n) {
-      margin-right: 0px;
-    }
   }
 }
 
-.portfolio__item:nth-child(3n) {
-  margin-right: 0px;
-}
-.portfolio__item:nth-last-child(-n + 3) {
-  margin-bottom: 0px;
+@media screen and (min-width: 1200px) {
+  .portfolio__item:nth-child(3n) {
+    margin-right: 0px;
+  }
+  .portfolio__item:nth-last-child(-n + 3) {
+    margin-bottom: 0px;
+  }
 }
 .portfolio__link {
   color: var(--main-text-color);
