--- a/sass/components/header_footer/_header.scss
+++ b/sass/components/header_footer/_header.scss
@@ -2,7 +2,7 @@
 .header {
   border: 1px solid #ececec;
   @media screen and (max-width: 767px) {
-    height: 90px;
+    position: relative;
   }
 }
 
@@ -38,8 +38,12 @@
   font-size: 26px;
   line-height: 1.19;
   @media screen and (max-width: 767px) {
-    padding-bottom: 21px;
-    padding-top: 21px;
+    padding-bottom: 16px;
+    padding-top: 16px;
+  }
+  @media screen and (min-width: 768px) {
+    padding-top: 26px;
+    padding-bottom: 26px;
   }
 }
 
@@ -68,11 +72,11 @@
 .navigation__link:focus {
   color: var(--accent-color);
 }
-@media screen and (max-width: 767px) {
-  .navigation__link--margin {
-    margin-bottom: 306px;
-  }
-}
+// @media screen and (max-width: 767px) {
+//   .navigation__link--margin {
+//     margin-bottom: 306px;
+//   }
+// }
 
 .contacts {
   @media screen and (max-width: 767px) {
@@ -149,6 +153,7 @@
 }
 .modal-list {
   display: flex;
+  flex-wrap: wrap;
   margin-top: 64px;
   @media screen and (min-width: 768px) {
     display: none;
@@ -176,26 +181,29 @@
   @media screen and (max-width: 767px) {
     display: none;
     position: absolute;
+    z-index: 999;
     padding: 48px 40px;
     background-color: white;
     top: 0px;
     left: 0px;
     width: 100%;
-    height: 796px;
+    height: 100vh;
   }
 }
 
 .container-nav.is-open {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .navigation__button {
   position: absolute;
+  z-index: 999;
   top: 22px;
   right: 23px;
   display: flex;
   justify-content: center;
-  align-items: center;
   cursor: pointer;
   width: 40px;
   height: 40px;
@@ -241,6 +249,11 @@
 
   &:hover,
   &:focus {
+    color: var(--accent-color);
+  }
+}
+@media screen and (max-width: 767px) {
+  .navigation__link--current {
     color: var(--accent-color);
   }
 }
