--- a/sass/components/main/_about-me.scss
+++ b/sass/components/main/_about-me.scss
@@ -11,6 +11,10 @@
   font-size: 36px;
   line-height: 1.16;
   text-align: center;
+  @media screen and (max-width: 1199px) {
+    font-size: 28px;
+    margin-bottom: 30px;
+  }
 }
 
 .about__list {
