--- a/sass/components/main/_hero.scss
+++ b/sass/components/main/_hero.scss
@@ -5,7 +5,6 @@
 .hero__overlay {
   padding-top: 200px;
   padding-bottom: 200px;
-  height: 600px;
   max-width: 1600px;
   margin-left: auto;
   margin-right: auto;
@@ -19,6 +18,10 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  @media screen and (max-width: 1199px) {
+    padding-top: 118px;
+    padding-bottom: 118px;
+  }
 }
 .hero__title {
   margin-top: 0px;
@@ -31,7 +34,7 @@
   letter-spacing: 0.06em;
   text-transform: uppercase;
 
-  @media screen and (min-width: 768px) {
+  @media screen and (max-width: 1199px) {
     width: 360px;
     font-size: 26px;
     line-height: 1.61;
