--- a/css/main.css
+++ b/css/main.css
@@ -694,7 +694,7 @@ a {
   background-color: var(--main-title);
 }
 
-@media screen and (min-width: 480px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .card__item:not(:last-child) {
     margin-bottom: 30px;
   }
@@ -707,8 +707,10 @@ a {
   }
 }
 
-.card__image {
-  width: 100%;
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .card__image {
+    width: 354px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
