--- a/sass/components/main/_our-team.scss
+++ b/sass/components/main/_our-team.scss
@@ -17,7 +17,7 @@
   border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
-  @media screen and (min-width: 480px) and (max-width: 767px) {
+  @media screen and (max-width: 767px) {
     &:not(:last-child) {
       margin-bottom: 30px;
     }
@@ -28,9 +28,12 @@
     flex-basis: calc((100% - 4 * 15px) / 2);
   }
 }
-.card__image {
-  width: 100%;
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .card__image {
+    width: 354px;
+  }
 }
+
 @media screen and (min-width: 1200px) {
   .card__item + .card__item {
     margin-left: 30px;
