fixed path to hero bgimage

--- a/sass/components/main/_hero.scss
+++ b/sass/components/main/_hero.scss
@@ -22,15 +22,26 @@
     padding-top: 118px;
     padding-bottom: 118px;
   }
-  @media screen and (min-device-pixel-ratio: 2),
-    screen and (min-resolution: 192dpi),
-    screen and (min-resolution: 2dppx) {
+  @media screen and (min-width: 480px) {
+    max-width: 480px;
+    background-size: 480px 400px;
     background-image: linear-gradient(
         to right,
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("../../../images/mobile/hero/Hero@2x.jpg");
+      url("../../../images/mobile/hero/Hero.jpg");
+
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      background-image: linear-gradient(
+          to right,
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)
+        ),
+        url("../../../images/mobile/hero/Hero@2x.jpg");
+    }
   }
 
   @media screen and (min-width: 768px) {
