--- a/css/main.css
+++ b/css/main.css
@@ -405,7 +405,7 @@ a {
   margin-left: auto;
   margin-right: auto;
   background-color: var(--text-color);
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../../images/mobile/hero/Hero.jpg);
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../../images/mobile/hero/Hero.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -455,7 +455,7 @@ a {
     box-sizing: border-box;
     background-size: cover;
     background-position: center;
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../../images/desktop/hero/Hero.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../../images/desktop/hero/Hero.jpg");
   }
 }
 
