--- a/sass/components/main/_hero.scss
+++ b/sass/components/main/_hero.scss
@@ -14,7 +14,7 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url(../../../images/mobile/hero/Hero.jpg);
+    url("../../../images/mobile/hero/Hero.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -79,7 +79,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(../../../images/desktop/hero/Hero.jpg);
+      url("../../../images/desktop/hero/Hero.jpg");
 
     @media screen and (min-device-pixel-ratio: 2),
       screen and (min-resolution: 192dpi),
