--- a/sass/components/main/_hero.scss
+++ b/sass/components/main/_hero.scss
@@ -14,85 +14,12 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url("../../../images/desktop/hero/Hero.jpg");
+    url(./images/desktop/hero/Hero.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  @media screen and (max-width: 1199px) {
-    padding-top: 118px;
-    padding-bottom: 118px;
-  }
-  @media screen and (min-width: 480px) {
-    max-width: 480px;
-    background-size: 480px 400px;
-    background-image: linear-gradient(
-        to right,
-        rgba(47, 48, 58, 0.4),
-        rgba(47, 48, 58, 0.4)
-      ),
-      url("../../../images/mobile/hero/Hero.jpg");
-
-    @media screen and (min-device-pixel-ratio: 2),
-      screen and (min-resolution: 192dpi),
-      screen and (min-resolution: 2dppx) {
-      background-image: linear-gradient(
-          to right,
-          rgba(47, 48, 58, 0.4),
-          rgba(47, 48, 58, 0.4)
-        ),
-        url("../../../images/mobile/hero/Hero@2x.jpg");
-    }
-  }
-
-  @media screen and (min-width: 768px) {
-    max-width: 768px;
-    background-size: 768px 400px;
-    background-image: linear-gradient(
-        to right,
-        rgba(47, 48, 58, 0.4),
-        rgba(47, 48, 58, 0.4)
-      ),
-      url("../../../images/tablet/hero/Hero.jpg");
-
-    @media screen and (min-device-pixel-ratio: 2),
-      screen and (min-resolution: 192dpi),
-      screen and (min-resolution: 2dppx) {
-      background-image: linear-gradient(
-          to right,
-          rgba(47, 48, 58, 0.4),
-          rgba(47, 48, 58, 0.4)
-        ),
-        url("../../../images/tablet/hero/Hero@2x.jpg");
-    }
-  }
-
-  @media screen and (min-width: 1200px) {
-    max-width: 1600px;
-    margin: 0 auto;
-    padding: 200px 0;
-    height: 600px;
-    box-sizing: border-box;
-    background-size: cover;
-    background-position: center;
-    background-image: linear-gradient(
-        to right,
-        rgba(47, 48, 58, 0.4),
-        rgba(47, 48, 58, 0.4)
-      ),
-      url("../../../images/desktop/hero/Hero.jpg");
-
-    @media screen and (min-device-pixel-ratio: 2),
-      screen and (min-resolution: 192dpi),
-      screen and (min-resolution: 2dppx) {
-      background-image: linear-gradient(
-          to right,
-          rgba(47, 48, 58, 0.4),
-          rgba(47, 48, 58, 0.4)
-        ),
-        url("../../../images/desktop/hero/Hero@2x.jpg");
-    }
-  }
 }
+
 .hero__title {
   margin-top: 0px;
   margin-left: auto;
