--- a/sass/components/main/_hero.scss
+++ b/sass/components/main/_hero.scss
@@ -14,7 +14,7 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url("./images/desktop/hero/Hero.jpg");
+    url("../images/desktop/hero/Hero.jpg");
 
   background-repeat: no-repeat;
   background-position: center;
